Initial draft towards version 0.0.1
- Creation of a base by creating the WHOData class, which incorperate function to load the data from the who excel, as well as do some basic statistics.
- Show the data through a basic dash app.

--- a/requirements.yml
+++ b/requirements.yml
@@ -8,5 +8,6 @@ dependencies:
   - pandas
   - dash
   - plotly
-  - ipykernel
-  - pip
+  - ipykernel # only required for debugging
+  - openpyxl
+  - pip # only required for debugging
