LocalData improvements, update Readme, Roadmap
- Improving impelmentation of localData (data scrapped from NABEL database).
- Update Readme with current progress for 0.0.1
- Updated requirements.yml to include dependencies for BS4

--- a/requirements.yml
+++ b/requirements.yml
@@ -10,4 +10,6 @@ dependencies:
   - plotly
   - ipykernel # only required for debugging
   - openpyxl
+  - beautifulsoup4
+  - lxml
   - pip # only required for debugging
